# roomatepy

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/database/: connection.py
app/models/: pydantic_room.py  room.py
app/repositories/: room.py
app/routes/: room.py
app/services/: room.py
migrations/alembic/versions/: 001_create_room_table.py  002_insert_into_room_table.py  003_insert_into_room_more.py
