[tool.poetry]
name = "roommate"
version = "0.1.0"
description = ""
authors = ["Evellyn Costa <ecosta.inf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
mysql-connector-python = "^8.0.33"
pymysql = "^1.0.3"
cachetools = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
install = "--global-option=--with-openssl --global-option=build_ext --global-option='-L/usr/local/opt/openssl/lib' --global-option='-I/usr/local/opt/openssl/include'"
